# zestify

./: .gitignore  LICENSE.md  README.md  main.py  pyproject.toml  rate_limits.json  ruff.toml
db/: conn.py  ingredients_repository.py  weekly_repository.py
dependency/: auth.py  get_current_user.py  ingredients.py  limiter.py  weekly.py
routes/: api.py  pages.py
schemas/: __init__.py  ingredients.py  responses.py  weekly.py
services/: auth.py  error_handlers.py  ingredients.py  weekly.py
static/css/: 404.css  error.css  ingredients.css  login.css  main.css  weekly.css
static/js/: error_codes.js  helpers.js  index.js  ingredients.js  login.js  weekly.js
templates/: 404.html.jinja  _ingredients_partial.html.jinja  base.html.jinja  error.html.jinja  index.html.jinja  ingredients.html.jinja  login.html.jinja  results.html.jinja  weekly.html.jinja
utils/: config.py  constants.py  error_codes.py  error_handlers.py  exceptions.py  position_mapping.py  security.py  signed_token.py  templates.py  validation.py
